--- a/resources/[ox]/ox_inventory/locales/en.json
+++ b/resources/[ox]/ox_inventory/locales/en.json
@@ -15,6 +15,7 @@
   "ui_ctrl_lmb": "Fast move a stack of items into another inventory",
   "ui_shift_drag": "Split item quantity into half",
   "ui_ctrl_shift_lmb": "Fast move half a stack of items into another inventory",
+  "ui_middle_click": "Used to use usable items quickly, in you're item slot",
   "ui_alt_lmb": "Fast use an item",
   "ui_ctrl_c": "When hovering over a weapon, copies it's serial number",
   "ui_remove_ammo": "Remove ammo",
